# open-text-analysis

./: .dockerignore  .gitignore  AI_ANALYST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command
.github/: pull_request_template.md
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: data-guide.md  decision-guide.md  methods.md  sources-and-originality.md
examples/: textsignal-fictional-corpus.csv  textsignal-fictional-corpus.xlsx  textsignal-starter-template.xlsx
scripts/: generate_examples.py
src/textsignal/: __init__.py  analysis.py  design.py  errors.py  examples.py  io.py  sentiment.py
tests/: test_analysis.py  test_app_pages.py  test_design.py  test_examples.py  test_io.py  test_sentiment.py
