[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textsignal"
version = "1.1.1"
description = "TextSignal: local-first exploratory text evidence and topic diagnostics"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "Ulrik Erlingsen" }]
keywords = [
  "text analysis",
  "content analysis",
  "tf-idf",
  "non-negative matrix factorization",
  "topic stability",
  "lexical keyness",
  "sentiment validation",
  "open-ended feedback",
  "marketing analytics",
  "streamlit",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "defusedxml>=0.7,<1",
  "numpy>=1.24,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.0,<3",
  "plotly>=5.18,<7",
  "scipy>=1.10,<2",
  "scikit-learn>=1.4,<2",
  "streamlit>=1.38,<2",
  "vaderSentiment>=3.3,<4",
]

[project.optional-dependencies]
test = [
  "build>=1.2,<2",
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.urls]
Homepage = "https://github.com/UlrikErlingsen/open-text-analysis"
Source = "https://github.com/UlrikErlingsen/open-text-analysis"
Issues = "https://github.com/UlrikErlingsen/open-text-analysis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
